# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2018-08-04 Michael Truog   <mjtruog at protonmail dot com>

    * Add fields to the CloudI Service API code_status function
      (build_cloudi_time, install_erlang_erts_time,
       install_erlang_kernel_time, install_erlang_stdlib_time,
       install_erlang_sasl_time, install_erlang_compiler_time,
       install_cloudi_time)
    * Use the deterministic Erlang compilation option

2018-07-28 Michael Truog   <mjtruog at protonmail dot com>

    * Add static method support to the Java CloudI API
      (including method references to static methods)

2018-07-26 Michael Truog   <mjtruog at protonmail dot com>

    * Add "--verbose 3" to the rebar2 command line
    * Fix the configure script help info default python-version
    * Add configure script dependencies on Erlang/OTP snmp and eunit
    * Prevent rebar2 from creating empty .so files
    * Allow the Python CloudI API and the Python/C CloudI API
      to utilize non-member functions that have api as the first
      parameter (to have access to the CloudI API object)
    * Update the msg_size python and python_c integration tests
      to utilize a non-member function

2018-07-14 Michael Truog   <mjtruog at protonmail dot com>

    * Improve the JSON-RPC handling in cloudi_service_api_requests
      so the specification is followed properly
    * Change the service_api dashboard web interface service summary
      to use the new JSON support added to cloudi_service_api_requests

2018-07-10 Michael Truog   <mjtruog at protonmail dot com>

    * Manual update of Elixir logging module and content type data

2018-07-09 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cloudi_args_type type specification

2018-07-07 Michael Truog   <mjtruog at protonmail dot com>

    * Fix Javascript CloudI API termination by closing its socket
    * Fix Javascript CloudI API version check for compatibility
